[gd_scene load_steps=28 format=3 uid="uid://c6kmyj2i5h0da"]

[ext_resource type="Script" path="res://resources/enemies/genius/genius.gd" id="1_qcxey"]
[ext_resource type="PackedScene" uid="uid://csitq07x285ie" path="res://resources/combat_system/context_map.tscn" id="2_mcnqk"]
[ext_resource type="SpriteFrames" uid="uid://cwo6a16cpn80e" path="res://resources/enemies/genius/ai_sprite_frames.tres" id="2_wors2"]
[ext_resource type="Script" path="res://scripts/golden_knight_animation_controller.gd" id="3_6l8jx"]
[ext_resource type="PackedScene" uid="uid://b5e3dgothl2hh" path="res://scenes/HealthSystem.tscn" id="4_bl3wg"]
[ext_resource type="PackedScene" uid="uid://djlr8l3go4n1t" path="res://scenes/health_bar.tscn" id="5_jsrdu"]
[ext_resource type="Script" path="res://scripts/enemy_health_bar.gd" id="6_rpf7h"]
[ext_resource type="StyleBox" uid="uid://bo620n6p3x02f" path="res://resources/enemies/genius/ai_health_background.tres" id="7_f3esr"]
[ext_resource type="StyleBox" uid="uid://b2ipvkjlrlpcj" path="res://resources/enemies/genius/ai_health_fill.tres" id="8_8otm5"]
[ext_resource type="Shape2D" uid="uid://c0247igrhqm6i" path="res://resources/enemies/genius/genius_hurt_box.tres" id="8_oiifk"]
[ext_resource type="Script" path="res://resources/states/ai_state_machine.gd" id="10_w03pm"]
[ext_resource type="Script" path="res://resources/states/goals/GOAL_genius_wait.gd" id="11_jm1xd"]
[ext_resource type="Texture2D" uid="uid://kr1gpjcu7ofy" path="res://assets/Actor/Characters/Shadow.png" id="12_ahx2d"]
[ext_resource type="Script" path="res://resources/states/goals/GOAL_genius_pursue.gd" id="12_i8qi6"]
[ext_resource type="Script" path="res://resources/states/goals/GOAL_genius_attack.gd" id="13_s3bju"]
[ext_resource type="Script" path="res://resources/states/goals/GOAL_genius_stagger.gd" id="13_uckny"]
[ext_resource type="Script" path="res://resources/states/goals/GOAL_genius_dead.gd" id="14_yt7lu"]
[ext_resource type="Shape2D" uid="uid://dnsu01e44ukw5" path="res://resources/enemies/genius/genius_detection_shape.tres" id="19_0e4s3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nexrx"]
radius = 6.0

[sub_resource type="Animation" id="Animation_22vld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d6g1s"]
resource_name = "walk"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.175, 0.25, 0.35, 0.425, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 7), Vector2(0, 5), Vector2(0, 7), Vector2(0, 5), Vector2(0, 7), Vector2(0, 5), Vector2(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5ly7"]
_data = {
"RESET": SubResource("Animation_22vld"),
"walk": SubResource("Animation_d6g1s")
}

[sub_resource type="Animation" id="Animation_w5rge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 7)]
}

[sub_resource type="Animation" id="Animation_r26g8"]
resource_name = "death_flash"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.790969, 4.28364e-06, 8.66354e-07, 1), Color(0.546968, 0.546968, 0.546968, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533, 0.0, -0.174533, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 7), Vector2(0, -10), Vector2(0, 7), Vector2(0, 7)]
}

[sub_resource type="Animation" id="Animation_q32be"]
resource_name = "hit_flash"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.790969, 4.28364e-06, 8.66354e-07, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533, 0.0, -0.174533, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qbcn"]
_data = {
"RESET": SubResource("Animation_w5rge"),
"death_flash": SubResource("Animation_r26g8"),
"hit_flash": SubResource("Animation_q32be")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa36x"]

[node name="Genius" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -6)
collision_layer = 103
collision_mask = 103
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
script = ExtResource("1_qcxey")
max_health = 30
knockback_force = 1000

[node name="DetectionRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(299, -10)
collision_mask = 7
collide_with_areas = true

[node name="DetectionRay2" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(300, 6)
collision_mask = 7
collide_with_areas = true

[node name="DetectionRay3" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(298, 20)
collision_mask = 7
collide_with_areas = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 7)
sprite_frames = ExtResource("2_wors2")
animation = &"front_attack"
offset = Vector2(0, -7)
script = ExtResource("3_6l8jx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_nexrx")

[node name="ContextMap" parent="." instance=ExtResource("2_mcnqk")]
visible = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 125.99
target_desired_distance = 95.9
path_max_distance = 30.0
navigation_layers = 70

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HealthSystem" parent="." node_paths=PackedStringArray("actor") instance=ExtResource("4_bl3wg")]
actor = NodePath("..")

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_system", "enemy_audio") instance=ExtResource("5_jsrdu")]
offset_left = -6.0
offset_top = -9.0
offset_right = -3.0
offset_bottom = -7.0
scale = Vector2(4, 1)
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_styles/background = ExtResource("7_f3esr")
theme_override_styles/fill = ExtResource("8_8otm5")
value = 100.0
rounded = false
fill_mode = 0
script = ExtResource("6_rpf7h")
health_system = NodePath("../HealthSystem")
enemy_audio = NodePath("../AI_Audio")

[node name="AI_Audio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("10_w03pm")
state = NodePath("wait")

[node name="wait" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("11_jm1xd")
object = NodePath("../..")

[node name="pursue" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("12_i8qi6")
object = NodePath("../..")
target_distance = 20
steering_force = 1.0

[node name="attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("13_s3bju")
object = NodePath("../..")

[node name="stagger" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("13_uckny")
object = NodePath("../..")

[node name="dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("14_yt7lu")
object = NodePath("../..")

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
visible = false
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" groups=["Enemy"]]
position = Vector2(0, 1)
shape = ExtResource("8_oiifk")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = ExtResource("19_0e4s3")

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.439216)
show_behind_parent = true
z_index = -1
position = Vector2(1, 8)
texture = ExtResource("12_ahx2d")

[node name="WalkAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../HitAnimator")
libraries = {
"": SubResource("AnimationLibrary_n5ly7")
}

[node name="HitAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1qbcn"),
"player": SubResource("AnimationLibrary_pa36x")
}

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TargetUpdate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="StateMachine/pursue" method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="TargetUpdate" to="." method="_on_target_update_timeout"]
